--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.24.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
+    "sass": "^1.45.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react-select": "^3.1.1"
   }
 }
