--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
-    "@types/react-select": "^3.1.1"
+    "@types/react-select": "^3.1.1",
+    "cypress": "^9.2.0"
   }
 }
