--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "cy:run": "cypress run",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
